--- a/DailyRoutines.AutoMateriaExport/DailyRoutines.AutoMateriaExport.csproj
+++ b/DailyRoutines.AutoMateriaExport/DailyRoutines.AutoMateriaExport.csproj
@@ -49,7 +49,7 @@
 
     <!-- 修改成你自己的 DR 路径 -->
     <PropertyGroup>
-        <DailyRoutinesPath>D:\Personal\Document\GitHub\DailyRoutines\bin\Debug\</DailyRoutinesPath>
+        <DailyRoutinesPath>C:\Users\qjming\AppData\Roaming\XIVLauncherCN\installedPlugins\DailyRoutines\1.6.7.0\</DailyRoutinesPath>
     </PropertyGroup>
 
     <ItemGroup>
